--- a/views/public/html/add-vendor.html
+++ b/views/public/html/add-vendor.html
@@ -77,9 +77,9 @@
         <!-- Menu -->
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-          <div class="app-brand demo">
+         <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
             <a href="indexpage.html" class="app-brand-link">
-                            <span class="app-brand-logo demo mb-3">
+              <span class="app-brand-logo demo mb-3 ">
 
                 <svg xmlns="http://www.w3.org/2000/svg" width="383.146" height="163.169" viewBox="0 0 383.146 163.169">
                   <g id="Group_1" data-name="Group 1" transform="translate(-941.509 -160.676)">
@@ -118,7 +118,8 @@
           </div>
 
  
-          <ul class="menu-inner py-1">
+                    <ul class="menu-inner py-1 pt-3">
+
             <!-- Dashboard -->
             <li class="menu-item">
               <a href="indexpage.html" class="menu-link">
