--- a/views/public/html/candidate-indexpage.html
+++ b/views/public/html/candidate-indexpage.html
@@ -113,7 +113,8 @@
           </div>
 
  
-          <ul class="menu-inner py-1">
+                    <ul class="menu-inner py-1 pt-3">
+
             <!-- Dashboard -->
             <li class="menu-item">
               <a href="candidate-indexpage.html" class="menu-link">
