--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -30,7 +30,6 @@
   <style>
 
 
-
 /* Add spinner styling */
 .spinner-overlay {
   position: fixed;
@@ -135,13 +134,13 @@
       <div class="layout-container">
         <!-- Menu -->
 
-        <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-          <div class="app-brand demo">
+        <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme ">
+          <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
             <a href="indexpage.html" class="app-brand-link">
               <span class="app-brand-logo demo mb-3 ">
                 <!-- <svg
                   width="25"
-                  viewBox="0 0 25 42"x
+                  viewBox="0 0 25 42"
                   version="1.1"
                   xmlns="../..//public/assets/img/illustrations/Nautilus Logo.svg"
                 >
@@ -232,7 +231,7 @@
 
           <!-- <div class="menu-inner-shadow"></div> -->
 
-          <ul class="menu-inner py-1">
+          <ul class="menu-inner py-1 pt-3">
             <!-- Dashboard -->
             <li class="menu-item">
               <a href="indexpage.html" class="menu-link">
