--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -772,7 +772,7 @@
                     <span><a href="./availableCandidates.html">Available Candidates</a></span>
                     <span><a href="./reportsAll.html">Export All</a></span>
                     <span><a href="./queries.html">Queries and Suggestions</a></span>
-
+                    <span><a href="./status.html"> Status</a></span>
                     <span><a href="./report.html"> Report</a></span>
 
 
