--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -78,9 +78,9 @@
         <!-- Menu -->
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-         <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
+          <div class="app-brand demo">
             <a href="indexpage.html" class="app-brand-link">
-              <span class="app-brand-logo demo mb-3 ">
+                            <span class="app-brand-logo demo mb-3">
 
                 <svg xmlns="http://www.w3.org/2000/svg" width="383.146" height="163.169" viewBox="0 0 383.146 163.169">
                   <g id="Group_1" data-name="Group 1" transform="translate(-941.509 -160.676)">
@@ -119,8 +119,7 @@
           </div>
 
  
-                    <ul class="menu-inner py-1 pt-3">
-
+          <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item">
               <a href="indexpage.html" class="menu-link">
@@ -553,7 +552,7 @@
 
                         <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Customers Table</h4>
 
-                          <div class="table-responsive">
+                          <div class="table-responsive card ">
                             <table id="company-table" class="table table-sm table-striped table-bordered" style="font-size: 12px;">
                               <thead>
                                 <tr > 
@@ -574,10 +573,10 @@
                               <tbody id="company-list"></tbody>
                               
                             </table>
-                            <div id="pagination-controls"></div>
+                            
 
                           </div>
-
+                          <div id="pagination-controls" class="mt-2"></div>
                           
                       </div>
                       
