--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -764,12 +764,13 @@
                           <input type="checkbox" id="disable_user">  Disable User?
                       </div>
                   </div>
-              
-                  <div class="card-footer text-end pt-0 pe-0 pb-1">
+                  <div class="card-footer text-end pt-0 pe-0 pb-1 mt-0">
 
                   <button class="btn btn-success" type="submit">Update User</button>
                   </div>
               </form>
+              <p class="text-center"><strong class="text-info">Note : </strong>after updating kindly Login again for the changes to be live.</p>
+
               
             </div>
             
