Dashboard bug fix

--- a/views/public/html/add-company.html
+++ b/views/public/html/add-company.html
@@ -538,7 +538,7 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container-fluid" id="settingsContainer">
+          <div class="container" id="settingsContainer">
 
             
 
