--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -591,7 +591,7 @@
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz</div>
               </div>
               
-              <div class="container " id="searchresult">
+              <div class="container-fluid " id="searchresult">
                 <div class="text-center fw-bold ">
                   <!-- NAUTILUS SHIPPING -->
                 </div>
