--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -541,7 +541,7 @@
           <div class="container-fluid">
  <a href="./indexpage.html" class="float-end btn btn-primary mt-3">Back To Dashboard</a>
 
-            <div class="container p-5">
+            <div class="container-fluid p-5">
                 <h3 class=" text-primary pb-0 mb-2">Birthday Reminder</h3>
                 <p style="font-size: 12px;" class="mt-0 pt-0">- Upcoming birthdays for a week is displayed below</p>
                   <div class="col">
