--- a/views/public/html/candidate-indexpage.html
+++ b/views/public/html/candidate-indexpage.html
@@ -72,10 +72,10 @@
         <!-- Menu -->
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-          <div class="app-brand demo">
-            <a href="candidate-indexpage.html" class="app-brand-link">
-                            <span class="app-brand-logo demo mb-3">
-
+          <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
+            <a href="indexpage.html" class="app-brand-link">
+              <span class="app-brand-logo demo mb-3 ">
+                
                 <svg xmlns="http://www.w3.org/2000/svg" width="383.146" height="163.169" viewBox="0 0 383.146 163.169">
                   <g id="Group_1" data-name="Group 1" transform="translate(-941.509 -160.676)">
                     <g id="Group_4320" data-name="Group 4320" transform="translate(941.648 255.186)">
@@ -104,8 +104,11 @@
                     </g>
                   </g>
                 </svg>
+                
+                
               </span>
-              </a>
+              <!-- <span class="app-brand-text demo menu-text fw-bolder ms-2">Nsnemo</span> -->
+            </a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
               <i class="bx bx-chevron-left bx-sm align-middle"></i>
@@ -282,7 +285,7 @@
 
             <div class="container-fluid flex-grow-1 container-p-y">
               <!-- Layout Demo -->
-              <div class="container card text-center mt-4">
+              <div class="container-fluid card text-center mt-4">
                 <div class="card-body">
                     <h1 class="card-title">Welcome aboard <span id="user_name" class="text-primary"></span>!</h1>
                     <p>Our app ensures seamless data management for you.</p>
