--- a/views/public/html/candidate-login.html
+++ b/views/public/html/candidate-login.html
@@ -115,7 +115,7 @@
               <div class="mb-3 form-password-toggle">
                 <div class="d-flex justify-content-between">
                   <label class="form-label" for="password">Password</label>
-                  <a href="user-forgot-pass.html">
+                  <a href="candidate-forgotpass.html">
                     <small>Forgot Password?</small>
                   </a>
                 </div>
