--- a/views/public/html/edit-c-bank.html
+++ b/views/public/html/edit-c-bank.html
@@ -540,7 +540,7 @@
 
             <div class="content-wrapper bg-white mt-3 rounded-3" style="display:none">
                 <div class="w-100 mt-3">
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1 class="text-center">Candidate Table</h1>
                         <div id="pagination-controls"></div>
             
@@ -717,7 +717,7 @@
           </div>
           <!-- Content wrapper -->
           <footer class="footer mt-auto py-3 bg-footer-theme">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="d-flex justify-content-between" style="margin-left: 250px;">
                     <span id="datetime"></span>
                     <span>Nautilus Shipping</span>
