--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -545,7 +545,7 @@
                     <!-- <a href="add-candidate.html"></a> > -->
                     <span>Company</span>
                   </div>
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1 class="text-center">Candidate Table</h1>
                         <div id="pagination-controls"></div>
             
@@ -1258,7 +1258,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
