--- a/views/public/html/edit-crew-planner.html
+++ b/views/public/html/edit-crew-planner.html
@@ -542,7 +542,7 @@
             <div class="content-wrapper bg-white mt-3 rounded-3" style="display:none">
 
                 
-                <div class="container mt-5" >
+                <div class="container-fluid mt-5" >
                      
                 <h2 >Crew Planner List</h2>
 
@@ -699,7 +699,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
