--- a/views/public/html/edit-grade.html
+++ b/views/public/html/edit-grade.html
@@ -646,7 +646,7 @@
           <!-- Content wrapper -->
         </div>
         <footer class="footer mt-auto py-3 bg-footer-theme">
-          <div class="container">
+          <div class="container-fluid">
               <div class="d-flex justify-content-between">
                   <span id="datetime"></span>
                   <span>Nautilus Shipping</span>
