--- a/views/public/html/edit-portagent-2.html
+++ b/views/public/html/edit-portagent-2.html
@@ -530,7 +530,7 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container">
+          <div class="container-fluid">
             <div class="content-wrapper card mt-3">
                 <div class="m-3">
                     <form id="update-port-agent-form">
@@ -584,7 +584,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
