--- a/views/public/html/edit-vendor.html
+++ b/views/public/html/edit-vendor.html
@@ -538,7 +538,7 @@
           <div class="container-fluid">
 
                 <div class="w-100 mt-3" style="display:none">
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1 class="text-center">Vendor List</h1>
                         <div id="pagination-controls"></div>
                 
@@ -606,7 +606,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
