--- a/views/public/html/profile.html
+++ b/views/public/html/profile.html
@@ -702,7 +702,7 @@
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz</div>
               </div>
               
-              <div class="container " id="searchresult">
+              <div class="container-fluid " id="searchresult">
                 <div class="text-center fw-bold ">
                   <!-- NAUTILUS SHIPPING -->
                 </div>
@@ -793,7 +793,7 @@
                   </div>
               </div>
           </div>
-    <div class="container mt-3">
+    <div class="container-fluid mt-3">
       
         <div class="">
             <div class="">
