--- a/views/public/html/seaservice.html
+++ b/views/public/html/seaservice.html
@@ -542,7 +542,7 @@
            
         
         
-               <div class="container mt-5">
+               <div class="container-fluid mt-5">
                   <h2 class="text-center mb-4">Sea Service Form</h2>
                   <form id="sea-service-form">
                     <div class="row">
@@ -608,7 +608,7 @@
                 </div>
               
             
-                <div class="container mt-5">
+                <div class="container-fluid mt-5">
                     <h2 class="text-center mb-4">Edit Sea Service</h2>
                     <form id="edit-sea-service-form">
                       <div class="row">
