--- a/views/public/html/seaserviceedit.html
+++ b/views/public/html/seaserviceedit.html
@@ -546,7 +546,7 @@
                
               
             
-                <div class="container mt-5">
+                <div class="container-fluid mt-5">
                     <h2 class="text-center mb-4">Edit Sea Service</h2>
                     <form id="edit-sea-service-form">
                       <div class="row">
