--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -78,10 +78,10 @@
         <!-- Menu -->
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-          <div class="app-brand demo">
+          <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
             <a href="indexpage.html" class="app-brand-link">
-                            <span class="app-brand-logo demo mb-3">
-
+              <span class="app-brand-logo demo mb-3 ">
+                
                 <svg xmlns="http://www.w3.org/2000/svg" width="383.146" height="163.169" viewBox="0 0 383.146 163.169">
                   <g id="Group_1" data-name="Group 1" transform="translate(-941.509 -160.676)">
                     <g id="Group_4320" data-name="Group 4320" transform="translate(941.648 255.186)">
@@ -110,8 +110,11 @@
                     </g>
                   </g>
                 </svg>
+                
+                
               </span>
-              </a>
+              <!-- <span class="app-brand-text demo menu-text fw-bolder ms-2">Nsnemo</span> -->
+            </a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
               <i class="bx bx-chevron-left bx-sm align-middle"></i>
@@ -119,7 +122,7 @@
           </div>
 
  
-          <ul class="menu-inner py-1">
+          <ul class="menu-inner py-1 pt-3">
             <!-- Dashboard -->
             <li class="menu-item">
               <a href="indexpage.html" class="menu-link">
@@ -541,7 +544,7 @@
           <!-- Content wrapper -->
           <div class="container-fluid" id="settingsContainer">
             
-            <div class="content-wrapper  rounded-3">
+            <div class="content-wrapper card container-fluid rounded-3">
                 <div class="w-100 mt-3 ">
                   <div id="breadcrumbs">
                     <a href="indexpage.html">Home</a> >
@@ -552,7 +555,7 @@
 
                         <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Customers Table</h4>
 
-                          <div class="table-responsive card ">
+                          <div class="table-responsive  ">
                             <table id="company-table" class="table table-sm table-striped table-bordered" style="font-size: 12px;">
                               <thead>
                                 <tr > 
@@ -731,7 +734,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
