--- a/views/public/html/add-c-travel.html
+++ b/views/public/html/add-c-travel.html
@@ -719,7 +719,7 @@
           </div>
           <!-- Content wrapper -->
           <footer class="footer mt-auto py-3 bg-footer-theme">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="d-flex justify-content-between">
                     <span id="datetime"></span>
                     <span>Nautilus Shipping</span>
