--- a/views/public/html/add-vesseltype.html
+++ b/views/public/html/add-vesseltype.html
@@ -650,7 +650,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
