--- a/views/public/html/crew-planner.html
+++ b/views/public/html/crew-planner.html
@@ -731,7 +731,7 @@
         <!-- / Layout page -->
       </div>
       <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
           <div class="d-flex justify-content-between">
               <span id="datetime"></span>
               <span>Nautilus Shipping</span>
