--- a/views/public/html/edit-c-document.html
+++ b/views/public/html/edit-c-document.html
@@ -541,7 +541,7 @@
 
             <div class="content-wrapper bg-white mt-3 rounded-3"  style="display:none">
                 <div class="w-100 mt-3">
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1 class="text-center">Document Table</h1>
                         <div id="pagination-controls"></div>
             
@@ -656,7 +656,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
