--- a/views/public/html/edit-document.html
+++ b/views/public/html/edit-document.html
@@ -635,7 +635,7 @@
         </div>
         <!-- / Layout page -->
         <footer class="footer mt-auto py-3 bg-footer-theme">
-          <div class="container">
+          <div class="container-fluid">
               <div class="d-flex justify-content-between">
                   <span id="datetime"></span>
                   <span>Nautilus Shipping</span>
