--- a/views/public/html/edit-experience-2.html
+++ b/views/public/html/edit-experience-2.html
@@ -546,7 +546,7 @@
               <div class="content-wrapper bg-white mt-3 rounded-3">
                   <div class="w-100 mt-3">
           
-                      <div class="container">
+                      <div class="container-fluid">
                           <h1 class="text-center">Experience Table</h1>
                           <div id="pagination-controls"></div>
           
@@ -605,7 +605,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
