--- a/views/public/html/edit-grade-2.html
+++ b/views/public/html/edit-grade-2.html
@@ -546,7 +546,7 @@
             <div class="content-wrapper bg-white mt-3 rounded-3" style="display:none">
                 <div class="w-100 mt-3">
                     <h1 class="text-center">Grade List</h1>
-                    <div class="container">
+                    <div class="container-fluid">
                         <div id="pagination-controls"></div>
             
                         <div class="table-responsive">
@@ -593,7 +593,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
