--- a/views/public/html/edit-rank-2.html
+++ b/views/public/html/edit-rank-2.html
@@ -540,7 +540,7 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container">
+          <div class="container-fluid">
             <div class="content-wrapper card mt-3">
                 <div class="mt-3">
                     <form id="update-rank-form" class="m-3 mt-0" >
@@ -573,7 +573,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
