--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -535,7 +535,7 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container">
+          <div class="container-fluid">
             <a href="./indexpage.html" class="float-end btn btn-primary mt-3">Back to Dashboard</a>
 
             <div class="row mt-5">
