--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -541,7 +541,7 @@
           
           <!-- Content wrapper -->
           <div class="container-fluid" >
-            <div class="container ">
+            <div class="container-fluid ">
               <a href="./indexpage.html" class="btn btn-primary float-end"> Back to Dashboard</a>
                 <h2 class="ms-0 mt-3">Todays All Discussions</h2>
 
@@ -551,7 +551,7 @@
             <script>
                     </script>
             
-            <div class="container">
+            <div class="container-fluid">
               <h4 class="text-dark">Discussion Status</h4>
               <form id="statusForm">
                 <div class="mb-3">
@@ -806,7 +806,7 @@ function decodeToken(token) {
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
