--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -554,7 +554,7 @@
 
             <div class="content-wrapper bg-white mt-3 rounded-3" style="display:none">
                 <div class="w-100 mt-3">
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1 class="text-center">Candidate Table</h1>
                         <div id="pagination-controls"></div>
             
@@ -1535,7 +1535,7 @@
 
             <!-- Footer -->
              <footer class="footer mt-auto py-3 bg-footer-theme">
-        <div class="container">
+        <div class="container-fluid">
             <div class="d-flex justify-content-between">
                 <span id="datetime"></span>
                 <span>Nautilus Shipping</span>
