--- a/views/public/html/view-cd.html
+++ b/views/public/html/view-cd.html
@@ -282,12 +282,12 @@
                 <div class="w-100">
                     <div class="content-wrapper  rounded-3">
                         <div class="w-100 mt-3">
-                            <div class="container">
+                            <div class="container-fluid">
                                 <h1 class="text-center text-dark">My Details</h1>
                                 <div id="pagination-controls"></div>
             
                                 
-                                <div class="container mt-4">
+                                <div class="container-fluid mt-4">
                                     <!-- Candidate Information Card -->
                                     <div class="card">
                                         <div class="card-header bg-warning m-5 rounded-pill p-0 pt-3">
