Dashboard bug fix 1

--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1440,7 +1440,7 @@
       
               <!-- Table to display onboard contracts -->
               <div class="card p-3 mb-3 mt-3">
-                  <h4 class="text-primary">Onboard Contracts</h4>
+                  <h4 class="text-primary">Candidates based on contracts</h4>
                   <table class="table table-bordered text-center">
                       <thead>
                           <tr>
