--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -707,7 +707,7 @@
 async function populateCandidatesTable() {
     try {
         const token = localStorage.getItem('token');
-        const response = await axios.get('https://nemo.ivistaz.co/candidate/avbreport');
+        const response = await axios.get('http://localhost:4000/candidate/avbreport');
         const responseData = response.data;
         const candidates = responseData.candidates;
 
