--- a/views/public/html/reportsAll.html
+++ b/views/public/html/reportsAll.html
@@ -74,7 +74,7 @@ console.log(decodedToken, permission);
 document.getElementById('exportCandidatesButton').addEventListener('click', async () => {
     if (permission) {
         try {
-            const endpoint = 'https://nemo.ivistaz.co/candidate/view-candidate';
+            const endpoint = 'http://localhost:4000/candidate/view-candidate';
             const token = localStorage.getItem('token');
             const response = await axios.get(endpoint, { headers: { "Authorization": token } });
 
@@ -101,7 +101,7 @@ const exportToExcel = (data) => {
 
 const handleGenerateAllCandidatesReport = async () => {
     try {
-        const endpoint = 'https://nemo.ivistaz.co/candidate/view-candidate';
+        const endpoint = 'http://localhost:4000/candidate/view-candidate';
         const token = localStorage.getItem('token');
         const response = await axios.get(endpoint, { headers: { "Authorization": token } });
 
