--- a/views/public/html/seaservice.html
+++ b/views/public/html/seaservice.html
@@ -678,7 +678,7 @@
   // Send request to update logged status to false
   const userId = localStorage.getItem('userId');
   if (userId) {
-    axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+    axios.put(`http://localhost:4000/user/${userId}/logout`)
       .then(response => {
         console.log('Logged out successfully');
       })
@@ -706,7 +706,7 @@
                                         async function editSeaService(id) {
                             try {
                                 const token = localStorage.getItem('token');
-                                const response = await axios.get(`https://nemo.ivistaz.co/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
+                                const response = await axios.get(`http://localhost:4000/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
                                 const seaService = response.data.editSea[0];
                                 console.log("edit response",response.data)
                 
@@ -744,7 +744,7 @@
                         try {
                             const token = localStorage.getItem('token');
                             const id = localStorage.getItem('memId')
-                            const response = await axios.get(`https://nemo.ivistaz.co/candidate/get-sea-service/${id}`, { headers: { "Authorization": token } });
+                            const response = await axios.get(`http://localhost:4000/candidate/get-sea-service/${id}`, { headers: { "Authorization": token } });
                             console.log(response);
                             const seaServices = response.data;
                 
@@ -797,7 +797,7 @@
                             try {
                                 const token = localStorage.getItem('token');
                                 const id = localStorage.getItem('memId');
-                                const response = await axios.post(`https://nemo.ivistaz.co/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
+                                const response = await axios.post(`http://localhost:4000/candidate/sea-service/${id}`, formData, { headers: { "Authorization": token } });
                                 console.log(response.data);
                                 alert('Sea Service record added successfully!');
                                 seaServiceForm.reset();
@@ -833,7 +833,7 @@
                             try {
                                 const token = localStorage.getItem('token');
                                 const id = document.getElementById('edit-sea-service-id').value;
-                                const response = await axios.put(`https://nemo.ivistaz.co/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
+                                const response = await axios.put(`http://localhost:4000/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
                                 console.log(response);
                                 alert('Sea Service record updated successfully!');
                                 editSeaServiceForm.reset();
@@ -848,7 +848,7 @@
                             if (confirm('Are you sure you want to delete this sea service record?')) {
                                 try {
                                   const token = localStorage.getItem('token')
-                                    const response = await axios.delete(`https://nemo.ivistaz.co/candidate/delete-sea-service/${id}`,{headers:{"Authorization":token}});
+                                    const response = await axios.delete(`http://localhost:4000/candidate/delete-sea-service/${id}`,{headers:{"Authorization":token}});
                                     console.log(response.data);
                                     location.reload(); // Refresh page after deletion
                                 } catch (error) {
