Dashboard bug fixed now maybe 3

--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1416,7 +1416,7 @@
                   <table class="table table-sm table-bordered text-center">
                       <thead>
                           <tr>
-                              <th>Name</th>
+                              <th style="font-size: 7px;">Name</th>
                               <th>NTBR</th>
                           </tr>
                       </thead>
