--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1409,14 +1409,26 @@
               <form id="dueForWorkedWithForm">
                   <button type="submit" class="btn btn-primary">Generate Report</button>
               </form>
-      
+              <!-- Pagination controls -->
+              <div class="pagination">
+                  <label for="pageSizeSelect">Values per page:</label>
+                  <select id="pageSizeSelect">
+                      <option value="25">25</option>
+                      <option value="50">50</option>
+                      <option value="100">100</option>
+                      <option value="500">500</option>
+                  </select>
+                  <button id="prevPageBtn">Previous</button>
+                  <button id="nextPageBtn">Next</button>
+              </div>
+    
               <!-- Table to display candidates with 'ntbr' -->
               <div class="card p-3 mb-3 mt-3">
                   <h4 class="text-primary">Candidates With NTBR</h4>
                   <table class="table table-sm table-bordered text-center">
                       <thead>
                           <tr>
-                              <th >Name</th>
+                              <th>Name</th>
                               <th>NTBR</th>
                           </tr>
                       </thead>
@@ -1426,7 +1438,7 @@
                   </table>
                   <div id="totalPagesCandidates"></div>
               </div>
-      
+    
               <!-- Table to display onboard contracts -->
               <div class="card p-3 mb-3 mt-3">
                   <h4 class="text-primary">Candidates based on contracts</h4>
@@ -1446,7 +1458,6 @@
                   <div id="totalPagesContracts"></div>
               </div>
           </div>
-      </div>
       
     
       
