company table ui changed

--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -544,7 +544,7 @@
           <!-- Content wrapper -->
           <div class="container-fluid" id="settingsContainer">
             
-            <div class="content-wrapper card container-fluid rounded-3">
+            <div class="content-wrapper card mt-3 container-fluid rounded-3">
                 <div class="w-100 mt-3 ">
                   <div id="breadcrumbs">
                     <a href="indexpage.html">Home</a> >
